Fix placeholder transparency on iOS

--- a/app/users/edit-user/edit-user.component.css
+++ b/app/users/edit-user/edit-user.component.css
@@ -56,5 +56,5 @@
 
 .user-info-editable-value {
   color: #000;
-  placeholder-color: white; /* hides the "null" placeholder for ios, when model is null */
+  placeholder-color: rgba(0, 0, 0, 0.001); /* hides the "null" placeholder for ios, when model is null */ 
 }
